Fix increase hero text on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -622,7 +622,7 @@ textarea {
 
 
     #hero-text-left p {
-        font-size: 80%;
+        font-size: 120%;
         padding: 2px;
     }
 
@@ -757,7 +757,7 @@ textarea {
     }
 
     #hero-text-left p {
-        font-size: 60%;
+        font-size: 95%;
         padding: 2px;
     }
 
@@ -767,7 +767,6 @@ textarea {
         height: 225px;
         width: 300px;
         font-size: 100%;
-
     }
 
     #hero-text-left br {
